--- a/package.json
+++ b/package.json
@@ -60,6 +60,10 @@
     "@ionic/app-scripts": "3.1.10",
     "typescript": "^2.8.3"
   },
+    "overrides": {
+      "grpc": "@grpc/grpc-js@^1.8.0",
+      "node-sass": "npm:node-sass@^6.0.1"
+    },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
